err/hubarcode.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/huBarcode-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/hubarcode'...
Listing './lib/python3.5/site-packages/hubarcode/code128'...
Listing './lib/python3.5/site-packages/hubarcode/code128/test_img'...
Listing './lib/python3.5/site-packages/hubarcode/datamatrix'...
Compiling './lib/python3.5/site-packages/hubarcode/datamatrix/matrixtest.py'...
***   File "./lib/python3.5/site-packages/hubarcode/datamatrix/matrixtest.py", line 53
    print "%r does not exist, skipping decoding tests" % dmtxread_path
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/hubarcode/datamatrix/placement.py'...
***   File "./lib/python3.5/site-packages/hubarcode/datamatrix/placement.py", line 15
    def place_bit(self, (posx, posy), bit):
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hubarcode/datamatrix/renderer.py'...
***   File "./lib/python3.5/site-packages/hubarcode/datamatrix/renderer.py", line 26
    def put_cell(self, (posx, posy), colour=1):
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hubarcode/ean13'...
Listing './lib/python3.5/site-packages/hubarcode/ean13/test_img'...
Listing './lib/python3.5/site-packages/hubarcode/fonts'...
Listing './lib/python3.5/site-packages/hubarcode/qrcode'...
Listing './lib/python3.5/site-packages/hubarcode/qrcode/qrcode_data'...
Listing './lib/python3.5/site-packages/hubarcode/qrcode/qrdata'...
Listing './lib/python3.5/site-packages/hubarcode/qrcode/test_img'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
